fix: reposition collapse button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -415,7 +415,7 @@ aside.theme-doc-sidebar-container {
 .theme-doc-sidebar-container button[title='Collapse sidebar'],
 .theme-doc-sidebar-container div[title='Expand sidebar'] {
   position: absolute;
-  top: 96px;
+  top: 75vh;
   right: -14px;
   width: 28px;
   height: 28px;
